add count click and update readme
